Adicionei o vídeo de demostração.

--- a/App/index.html
+++ b/App/index.html
@@ -187,7 +187,7 @@
 
         </div>
 
-            <iframe id="editor" class="editor-text-content" contenteditable="true"  spellcheck="true" lang="pt" >
+            <iframe id="editor" class="editor-text-content" contenteditable="true" >
                 
             </iframe>
 
