Ícone botão lista numerada

--- a/App/index.html
+++ b/App/index.html
@@ -139,7 +139,7 @@
                     <div class="numbers-list">
 
                         <button class="lines-list-button">
-                            <img src="/ImagesForIcons/1x/round_format_list_numbered_black_18dp.png" alt="" srcset="">
+                            <img src="../ImagesForIcons/1x/round_format_list_numbered_black_18dp.png" alt="" srcset="">
                         </button>
 
                     </div>
